Use Math.clamp where unambiguous